--- a/src/main/resources/calendarBox.fxml
+++ b/src/main/resources/calendarBox.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.HBox?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: #62C3E3;" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXButton buttonType="RAISED" ripplerFill="#a31d1dc2" style="-fx-background-color: #62C3E3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Label fx:id="date" layoutX="9.0" layoutY="6.0" text="1" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="8.0" />
-      <JFXHamburger layoutX="30.0" layoutY="50.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="40.0" />
       <JFXHamburger layoutX="141.0" layoutY="50.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="40.0" />
+      <HBox fx:id="iconContainer" styleClass="icon-container">
+         <children>
+            <Label fx:id="icon"/>
+         </children>
+      </HBox>
    </children>
+   <effect>
+      <DropShadow />
+   </effect>
 </AnchorPane>
