--- a/src/main/resources/Calendar/calendarBox.fxml
+++ b/src/main/resources/Calendar/calendarBox.fxml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-
 <?import javafx.scene.layout.HBox?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: #62C3E3;" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" style="-fx-background-color: #62C3E3;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="date" layoutX="9.0" layoutY="6.0" text="1" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="8.0" />
-      <JFXHamburger layoutX="141.0" layoutY="50.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="40.0" />
-      <HBox fx:id="iconContainer" styleClass="icon-container">
+      <HBox fx:id="iconContainer" alignment="CENTER" styleClass="icon-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="icon"/>
+            <Label fx:id="icon" alignment="CENTER" contentDisplay="CENTER" prefHeight="16.0" prefWidth="173.0" text="Test" textOverrun="CLIP" />
          </children>
       </HBox>
    </children>
