--- a/src/main/resources/Calendar/calendarBoxV2.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2.fxml
@@ -17,7 +17,7 @@
             <JFXButton styleClass="box-button" fx:id="button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
-      <BorderPane>
+      <BorderPane mouseTransparent="true">
          <top>
             <Label styleClass="date-label" fx:id="date" text="Date" BorderPane.alignment="TOP_LEFT"/>
          </top>
@@ -26,13 +26,6 @@
                <children>
                   <JFXBadge fx:id="badge" position="TOP_RIGHT" styleClass="icon-badge" text="13">
                      <Label fx:id="icon" alignment="CENTER" contentDisplay="CENTER" styleClass="icon">
-                        <padding>
-                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                        </padding>
-                     </Label>
-                  </JFXBadge>
-                  <JFXBadge fx:id="badge2" position="TOP_RIGHT" styleClass="icon-badge" text="13">
-                     <Label fx:id="icon2" alignment="CENTER" contentDisplay="CENTER" styleClass="icon">
                         <padding>
                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
