--- a/src/main/resources/Calendar/calendarBoxV2.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2.fxml
@@ -24,7 +24,7 @@
          <center>
             <HBox fx:id="iconContainer" alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <JFXBadge fx:id="badge" position="TOP_RIGHT" styleClass="icon-badge" text="13">
+                  <JFXBadge fx:id="badge" position="TOP_RIGHT" styleClass="icon-badge">
                      <Label fx:id="icon" alignment="CENTER" contentDisplay="CENTER" styleClass="icon">
                         <padding>
                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
