--- a/src/main/resources/Schedule/scheduletest.fxml
+++ b/src/main/resources/Schedule/scheduletest.fxml
@@ -4,16 +4,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <GridPane layoutX="76.0" layoutY="66.0" prefHeight="286.0" prefWidth="448.0" style="-fx-border-color: Black; -fx-grid-lines-visible: True;" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="76.0" AnchorPane.rightAnchor="76.0" AnchorPane.topAnchor="66.0">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <GridPane prefHeight="286.0" prefWidth="448.0" style="-fx-border-color: Black; -fx-grid-lines-visible: True;" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -335,12 +336,21 @@
             </Label>
          </children>
       </GridPane>
-      <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="See today" AnchorPane.bottomAnchor="354.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="514.0" AnchorPane.topAnchor="21.0" />
-      <ProgressBar layoutX="76.0" layoutY="362.0" prefHeight="18.0" prefWidth="448.0" progress="0.0" AnchorPane.leftAnchor="76.0" AnchorPane.topAnchor="362.0" />
-      <Label alignment="CENTER" layoutX="98.0" layoutY="16.0" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER" AnchorPane.bottomAnchor="349.0" AnchorPane.leftAnchor="98.0" AnchorPane.rightAnchor="97.0" AnchorPane.topAnchor="16.0">
+   </center>
+   <left>
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="See today" BorderPane.alignment="CENTER" />
+   </left>
+   <bottom>
+      <ProgressBar prefHeight="20.0" prefWidth="429.0" progress="0.0" BorderPane.alignment="CENTER" />
+   </bottom>
+   <top>
+      <Label alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-   </children>
-</AnchorPane>
+   </top>
+   <right>
+      <Pane prefHeight="419.0" prefWidth="73.0" BorderPane.alignment="CENTER" />
+   </right>
+</BorderPane>
