Added code for VBox Pane instead of GridPane. Grid Pane still works.

--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -28,7 +28,11 @@
 	-fx-button-type: RAISED
 }
 
-#week-day {
+.week-day {
     -fx-font-weight: BOLD;
     -fx-underline: true;
+}
+
+.box {
+    -fx-padding:0;
 }
