Switched to VBox Pane instead of Grid Pane and they look identical.

--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -28,9 +28,10 @@
 	-fx-button-type: RAISED
 }
 
-.week-day {
+.weekday:Label {
     -fx-font-weight: BOLD;
     -fx-underline: true;
+    -fx-background-color:#E38262;
 }
 
 .box {
