--- a/src/main/resources/CoreUI/ButtonUI.css
+++ b/src/main/resources/CoreUI/ButtonUI.css
@@ -2,6 +2,17 @@
      -fx-padding: 0.7em 0.57em;
      -fx-font-size: 14px;
      -fx-button-type: RAISED;
-     -fx-background-color: rgb(77, 102, 204);
+     -fx-background-color: rgb(30, 144, 255);
      -fx-text-fill: WHITE;
+     -fx-cursor: hand;
+}
+
+
+.jfx-hamburger-icon{
+    -fx-spacing: 5;
+    -fx-cursor: hand;
+}
+.jfx-hamburger-icon StackPane{
+    -fx-background-color : WHITE;
+    -fx-background-radius : 5px;
 }
