--- a/src/main/resources/CoreUI/NavigationBar.fxml
+++ b/src/main/resources/CoreUI/NavigationBar.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.shape.Rectangle?>
 
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.mainDocumentController">
+<?import javafx.scene.layout.Pane?>
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.mainDocumentController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="47.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill= "rgb(255, 95, 56)" height="47.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
       <JFXDrawer fx:id="navDrawer" defaultDrawerSize="200.0" layoutY="47.0" prefHeight="353.0" prefWidth="600.0" />
       <JFXHamburger fx:id="navHamburger" layoutX="14.0" layoutY="14.0" onMouseClicked="#fistMeDaddy" />
    </children>
-</AnchorPane>
+</Pane>
