--- a/src/main/resources/Calendar/calendarBoxV2.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2.fxml
@@ -12,7 +12,7 @@
 <?import javafx.geometry.Insets?>
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="100.0" prefWidth="150.0">
+      <AnchorPane fx:id="anchorPane" prefHeight="100.0" prefWidth="150.0">
          <children>
             <JFXButton styleClass="box-button" fx:id="button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
