Added the (cancerous) label variables to the controller. This allows them to be called and changed. The @FXML tag is mandatory or the program will crash on start. Example is given in the controller.

--- a/src/main/resources/Schedule/scheduletest.fxml
+++ b/src/main/resources/Schedule/scheduletest.fxml
@@ -523,7 +523,7 @@
    <bottom>
       <BorderPane prefHeight="58.0" prefWidth="573.0" BorderPane.alignment="CENTER">
          <center>
-            <ProgressBar prefHeight="20.0" prefWidth="369.0" progress="0.0" BorderPane.alignment="CENTER" />
+            <ProgressBar fx:id="progressBar" prefHeight="20.0" prefWidth="369.0" progress="0.0" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
    </bottom>
