--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -9,13 +9,15 @@
      -fx-padding: 10;
 }
 
+
 .icon-badge .badge-pane {
-	-fx-background-color:#FFC107; /*Light Orange*/
+	-fx-background-color:#FFC107;
 	-fx-background-radius: 23;
 	-fx-pref-width: 23;
 	-fx-pref-height: 23;
 	-fx-alignment: center;
 }
+
 
 .icons-badge Label{
 	-fx-font-weight: BOLD;
@@ -25,23 +27,20 @@
 
 .box-button {
 	-fx-background-color: #FFFFFF;
-	-fx-button-type: RAISED
 }
+
 
 .box-button-selected {
 	-fx-background-color: #E38262;
-	-fx-button-type: RAISED
 }
 
+/*
 .weekday:Label {
     -fx-font-weight: BOLD;
     -fx-underline: true;
     -fx-background-color:#E38262;
 }
-
-.box {
-    -fx-padding:0;
-}
+*/
 
 .taskBox {
     -fx-background-color:#FFFFFF;
