--- a/src/main/resources/Schedule/day.fxml
+++ b/src/main/resources/Schedule/day.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <GridPane gridLinesVisible="true" prefHeight="193.0" prefWidth="187.0" BorderPane.alignment="CENTER">
@@ -38,7 +37,7 @@
    <left>
       <BorderPane prefHeight="193.0" prefWidth="134.0" BorderPane.alignment="CENTER">
          <top>
-            <JFXButton buttonType="RAISED" prefHeight="26.0" prefWidth="104.0" ripplerFill="#c97575" text="See Schedule" BorderPane.alignment="CENTER" />
+            <JFXButton defaultButton="true" prefHeight="26.0" prefWidth="104.0" ripplerFill="#c97575" text="See Schedule" BorderPane.alignment="CENTER" />
          </top>
       </BorderPane>
    </left>
