--- a/src/main/resources/CoreUI/ButtonUI.css
+++ b/src/main/resources/CoreUI/ButtonUI.css
@@ -2,7 +2,7 @@
      -fx-padding: 0.7em 0.57em;
      -fx-font-size: 14px;
      -fx-button-type: RAISED;
-     -fx-background-color: rgb(255, 95, 56);
+     -fx-background-color: #FF9800;
      -fx-text-fill: WHITE;
      -fx-cursor: hand;
 }
