--- a/src/main/resources/Calendar/taskBox.fxml
+++ b/src/main/resources/Calendar/taskBox.fxml
@@ -5,9 +5,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox styleClass="taskBox" fx:id="textBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
+<HBox styleClass="taskBox" fx:id="textHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXTextField prefWidth="1060" promptText="Enter Task..." />
+      <JFXTextField fx:id="textBox" prefWidth="1060" promptText="Enter Task..." />
       <JFXHamburger>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
