--- a/src/main/resources/Schedule/scheduletest.fxml
+++ b/src/main/resources/Schedule/scheduletest.fxml
@@ -500,7 +500,7 @@
       </GridPane>
    </center>
    <top>
-      <Label fx:id="Title" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER" BorderPane.alignment="CENTER">
+      <Label fx:id="Title3" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
