--- a/src/main/resources/CoreUI/NavigationBar.fxml
+++ b/src/main/resources/CoreUI/NavigationBar.fxml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDrawer?>
 <?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="anchorPane" minHeight="480.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.mainDocumentController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.MainDocumentController">
    <children>
       <Pane fx:id="topBar" prefHeight="48.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
+         <children>
+            <JFXButton fx:id="sportsScheduleButton" layoutX="446.0" layoutY="11.0" onMouseClicked="#openSportsDialogue" text="Set Sports Schedule" />
+         </children>
       </Pane>
       <JFXDrawer fx:id="navDrawer" defaultDrawerSize="200.0" layoutY="63.0" minHeight="100.0" prefHeight="417.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="48.0" />
-      <JFXHamburger fx:id="navHamburger" onMouseClicked="#fistMeDaddy" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+      <JFXHamburger fx:id="navHamburger" onMouseClicked="#openDrawer" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
    </children>
 </AnchorPane>
