--- a/src/main/resources/News/News1_2.fxml
+++ b/src/main/resources/News/News1_2.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.News.SimpleController">
+<?import javafx.scene.text.*?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65"
+            fx:controller="WHS_planner.News.ui.SimpleController">
    <children>
       <Hyperlink fx:id="Article_Title_Sample2" layoutX="232.0" layoutY="14.0" onAction="#openLink" text="Article Title" textAlignment="CENTER">
          <font>
