--- a/src/main/resources/News/news1_4.fxml
+++ b/src/main/resources/News/news1_4.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65"
-            fx:controller="NewsUI">
+            fx:controller="WHS_planner.News.ui.SimpleController">
     <children>
         <VBox prefHeight="600.0" prefWidth="800.0">
             <children>
