--- a/src/main/resources/Schedule/scheduletest.fxml
+++ b/src/main/resources/Schedule/scheduletest.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.BorderPane?>
@@ -1189,15 +1188,7 @@
       <Pane prefHeight="388.0" prefWidth="102.0" BorderPane.alignment="CENTER" />
    </right>
    <left>
-      <BorderPane prefHeight="426.0" prefWidth="104.0" BorderPane.alignment="CENTER">
-         <top>
-            <Button fx:id="ChangeButton" mnemonicParsing="false" onAction="#TylerIsACreep" text="See Today" BorderPane.alignment="CENTER">
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </Button>
-         </top>
-      </BorderPane>
+      <BorderPane prefHeight="426.0" prefWidth="104.0" BorderPane.alignment="CENTER" />
    </left>
    <bottom>
       <BorderPane prefHeight="58.0" prefWidth="573.0" BorderPane.alignment="CENTER">
