--- a/src/main/resources/Calendar/calendarBoxV2-empty.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2-empty.fxml
@@ -11,5 +11,5 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.shape.Rectangle?>
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane minHeight="75.0" minWidth="100.0" prefHeight="75" prefWidth="100.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
 </StackPane>
