--- a/src/main/resources/News/news1_5.fxml
+++ b/src/main/resources/News/news1_5.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65"
             fx:controller="WHS_planner.News.ui.SimpleController">
     <children>
-        <JFXListView id="articleList" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0"
+        <JFXListView fx:id="articleListView" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0"
                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-        <Button layoutX="522.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateFrame" text="Refresh"/>
+        <JFXButton layoutX="507.0" layoutY="14.0" onAction="#updateFrame" text="Refresh" AnchorPane.rightAnchor="11.0"
+                   AnchorPane.topAnchor="14.0"/>
     </children>
 </AnchorPane>
