--- a/src/main/resources/News/news1_5.fxml
+++ b/src/main/resources/News/news1_5.fxml
@@ -9,7 +9,7 @@
     <children>
         <JFXListView fx:id="articleListView" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0"
                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-        <JFXButton layoutX="507.0" layoutY="14.0" onAction="#updateFrame" text="Refresh" AnchorPane.rightAnchor="11.0"
-                   AnchorPane.topAnchor="14.0"/>
+        <JFXButton layoutX="507.0" layoutY="14.0" onAction="#updateFrame" text="to be removed"
+                   AnchorPane.rightAnchor="29.0" AnchorPane.topAnchor="14.0"/>
     </children>
 </AnchorPane>
