--- a/src/main/resources/CoreUI/SportsPopup.fxml
+++ b/src/main/resources/CoreUI/SportsPopup.fxml
@@ -6,18 +6,19 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="sportsPopupAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="sportsPopupAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.popupController">
    <children>
-      <JFXButton fx:id="addListButton" graphicTextGap="0.0" layoutX="545.0" onMouseClicked="#plusButtonPressed" prefHeight="45.0" prefWidth="55.0" ripplerFill="#ff1212" text="+" textAlignment="CENTER" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <JFXButton fx:id="addListButton" graphicTextGap="0.0" layoutX="545.0" onMouseClicked="#plusButtonPressed" prefHeight="61.0" prefWidth="74.0" ripplerFill="#ff1212" text="+" textAlignment="CENTER" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </JFXButton>
-      <HBox layoutY="45.0" prefHeight="169.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="45.0">
+      <HBox layoutY="59.0" prefHeight="271.0" prefWidth="704.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="59.0">
          <children>
             <JFXListView fx:id="nameListView" prefWidth="210.0" />
             <JFXListView fx:id="dateListView" prefWidth="210.0" />
             <JFXListView fx:id="timeListView" prefWidth="210.0" />
+            <JFXListView fx:id="minusListView" prefWidth="74.0" />
          </children>
       </HBox>
    </children>
