--- a/src/main/resources/Calendar/calendarBoxV2.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2.fxml
@@ -11,13 +11,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.geometry.Insets?>
 
-<StackPane minHeight="75.0" minWidth="100.0" prefHeight="75" prefWidth="100.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane minHeight="75.0" minWidth="100.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane fx:id="anchorPane">
-         <children>
-            <JFXButton styleClass="box-button" fx:id="button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
+      <JFXButton styleClass="box-button" fx:id="button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <BorderPane mouseTransparent="true">
          <top>
             <Label styleClass="date-label" fx:id="date" text="Date" BorderPane.alignment="TOP_LEFT"/>
