--- a/src/main/resources/CoreUI/NavigationBar.fxml
+++ b/src/main/resources/CoreUI/NavigationBar.fxml
@@ -7,17 +7,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.MainDocumentController">
-   <children>
-      <Pane fx:id="topBar" prefHeight="48.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.BorderPane?>
+
+<StackPane fx:id="mainPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.MainDocumentController">
+   <VBox fx:id="contentPane">
+      <BorderPane fx:id="topBar" prefHeight="48.0" minHeight="48.0" maxHeight="48.0">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
-         <children>
-            <JFXButton fx:id="sportsScheduleButton" layoutX="446.0" layoutY="11.0" onMouseClicked="#openSportsDialogue" text="Set Sports Schedule" />
-         </children>
-      </Pane>
-      <JFXDrawer fx:id="navDrawer" defaultDrawerSize="200.0" layoutY="63.0" minHeight="100.0" prefHeight="417.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="48.0" />
-      <JFXHamburger fx:id="navHamburger" onMouseClicked="#openDrawer" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-   </children>
-</AnchorPane>
+         <right>
+            <JFXButton fx:id="sportsScheduleButton" style="-fx-padding:16;" onMouseClicked="#openSportsDialogue" text="Set Sports Schedule" />
+         </right>
+         <left>
+            <JFXHamburger fx:id="navHamburger" style="-fx-padding:11;" onMouseClicked="#openDrawer"/>
+         </left>
+      </BorderPane>
+   </VBox>
+   <JFXDrawer fx:id="navDrawer" defaultDrawerSize="200.0" layoutY="63.0" minHeight="100.0" prefHeight="417.0" prefWidth="600.0"/>
+</StackPane>
