--- a/src/main/resources/Meeting/meeting.fxml
+++ b/src/main/resources/Meeting/meeting.fxml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.Meeting.MeetingController">
    <children>
-      <HBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
          <children>
             <JFXListView fx:id="requestingListView" />
             <JFXListView fx:id="classListView" />
             <JFXListView fx:id="requestedListView" />
          </children>
       </HBox>
+      <Label layoutX="284.0" layoutY="21.0" text="Meetings" textAlignment="CENTER" AnchorPane.leftAnchor="271.0" AnchorPane.rightAnchor="270.0" AnchorPane.topAnchor="17.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <JFXButton fx:id="importButton" layoutX="477.0" layoutY="13.0" onAction="#importButtonPressed" ripplerFill="#686868" text="Import Meeting" AnchorPane.leftAnchor="477.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="13.0" />
    </children>
 </AnchorPane>
