--- a/src/main/resources/Schedule/wankTest.fxml
+++ b/src/main/resources/Schedule/wankTest.fxml
@@ -13,7 +13,7 @@
 
 <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="573.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.Schedule.ScheduleController">
    <center>
-      <GridPane fx:id="grid" style="-fx-border-color: Black; -fx-grid-lines-visible: False;" BorderPane.alignment="CENTER">
+      <GridPane fx:id="grid" style="-fx-border-color: White; -fx-grid-lines-visible: False;" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
