added highlight to current day in calendar :kissing_cat:

--- a/src/main/resources/Calendar/calendarBoxV2.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2.fxml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.StackPane?>
-
-
-<?import com.jfoenix.controls.JFXBadge?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.geometry.Insets?>
-
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<StackPane fx:id="stackPane" minHeight="80.0" minWidth="110.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.shape.Circle?>
+
+<StackPane fx:id="stackPane" minHeight="80.0" minWidth="110.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXButton fx:id="button" styleClass="box-button"  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <JFXButton fx:id="button" styleClass="box-button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <VBox fx:id="vbox" mouseTransparent="true">
-         <Label fx:id="dateLabel" styleClass="date-label" alignment="TOP_LEFT" mouseTransparent="true"/>
-         <HBox fx:id="iconContainer" alignment="CENTER" mouseTransparent="true"></HBox>
+         <StackPane fx:id="circleStackPane" alignment="TOP_LEFT" mouseTransparent="true">
+            <Circle fx:id="dayCircle" fill="white" mouseTransparent="true" radius="10.0" styleClass="date-circle">
+               <StackPane.margin>
+                  <Insets left="0.0" />
+               </StackPane.margin></Circle>
+            <Label fx:id="dateLabel" mouseTransparent="true" styleClass="date-label">
+               <StackPane.margin>
+                  <Insets left="4.0" top="-1.0" />
+               </StackPane.margin></Label>
+         </StackPane>
+         <HBox fx:id="iconContainer" alignment="CENTER" mouseTransparent="true" />
       </VBox>
    </children>
 </StackPane>
