More styling + news in Roboto. Not sure if news should be in Roboto tho, removes the "newspaper" feel slightly. send feedback

--- a/src/main/resources/Calendar/topRow.css
+++ b/src/main/resources/Calendar/topRow.css
@@ -10,3 +10,9 @@
      -fx-background-color: #BDBDBD;
      -fx-text-fill: #FFFFFF;
 }
+
+.label {
+    -fx-font-size: 18pt;
+    -fx-font-family: "Roboto";
+
+}
