--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -38,7 +38,8 @@
 
 
 .weekday {
-    -fx-font-weight: BOLD;
+    -fx-font-family: "Roboto";
+    /*-fx-font-weight: BOLD;*/
     -fx-underline: true;
     -fx-alignment: center ;
     -fx-padding: 5;
