I'M BECOMING MAD WITH POWER: Redid iPass login page, removed hamburger rounding

--- a/src/main/resources/UI/Main.css
+++ b/src/main/resources/UI/Main.css
@@ -9,6 +9,7 @@
 
 .jfx-hamburger-icon{
     -fx-cursor: hand;
+    -fx-background-radius: 0;
 }
 .jfx-hamburger-icon StackPane{
     -fx-background-color : WHITE;
